fixed mmp alignment issues

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -44,6 +44,11 @@ body {
   fill: none;
   /*fill: black;*/
 }
+
+.riding.regional .riding-border {
+  stroke-width: 0;
+}
+
 .region-border {
   stroke: black;
   /*stroke-width: 2;*/
@@ -75,12 +80,6 @@ body {
 /*hide them all initially*/
 .FPTP, .DMP, .MMP, .IRV {
   display: none;
-}
-
-.title {
-  /*margin-bottom: 0px;*/
-  /*font-size: 16px;*/
-  /*font-weight: bold;*/
 }
 
 .legend {
